- Further footer-code fixes to align w/ previous footer.css update

--- a/demo/src/main/resources/templates/static/css/global-styles/fonts.css
+++ b/demo/src/main/resources/templates/static/css/global-styles/fonts.css
@@ -1,6 +1,6 @@
 /*Global
  Skrifttypen brug til dokumentet er Trebuchet MS*/
-p {
+* {
     font-family: "Trebuchet MS";
-    font-size: 12px;
+
 }
